<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Crear_EditarGeneroActivity">

    <EditText
        android:id="@+id/et_nombre_genero"
        android:layout_width="265dp"
        android:layout_height="49dp"
        android:ems="10"
        android:hint="@string/etNombreG"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/et_fecha"
        android:layout_width="231dp"
        android:layout_height="45dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/etFechaG"
        android:inputType="date"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_nombre_genero"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/et_nombre_genero"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre_genero" />

    <EditText
        android:id="@+id/et_numSubgeneros"
        android:layout_width="230dp"
        android:layout_height="47dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/etNumSubgeneros"
        android:inputType="number"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_fecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_fecha"
        app:layout_constraintTop_toBottomOf="@+id/et_fecha" />

    <EditText
        android:id="@+id/et_ganancias_genero"
        android:layout_width="229dp"
        android:layout_height="45dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/etGananciasG"
        android:inputType="numberDecimal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_numSubgeneros"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_numSubgeneros"
        app:layout_constraintTop_toBottomOf="@+id/et_numSubgeneros" />

    <Switch
        android:id="@+id/sw_activo"
        android:layout_width="130dp"
        android:layout_height="43dp"
        android:layout_marginTop="36dp"
        android:buttonTint="#2F75AE"
        android:showText="false"
        android:text="@string/etGeneroAct"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/et_ganancias_genero"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/et_ganancias_genero"
        app:layout_constraintTop_toBottomOf="@+id/et_ganancias_genero"
        tools:checked="true" />

    <Button
        android:id="@+id/btn_save_genero"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="114dp"
        android:layout_height="57dp"
        android:layout_marginBottom="176dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/btGuardarG"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>