<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_nombre_pelicula"
        android:layout_width="320dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/itemPNombre"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_fecha_pelicula"
        android:layout_width="88dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/itemPFecha"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_nombre_pelicula"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="@+id/tv_nombre_pelicula"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_pelicula" />

    <TextView
        android:id="@+id/tv_en_cartelera_pelicula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/itemPCartelera"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_nombre_pelicula"
        app:layout_constraintHorizontal_bias="0.572"
        app:layout_constraintStart_toEndOf="@+id/tv_fecha_pelicula"
        app:layout_constraintTop_toBottomOf="@+id/tv_nombre_pelicula"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>